fixed image upload bug + more

--- a/app/templates/profiles/add-members.html
+++ b/app/templates/profiles/add-members.html
@@ -8,27 +8,22 @@
         </span>
       </a>
       <p class="modal-card-title" id="header">Add members</p>
-      <button class="button is-info is-normal is-rounded" id="save-button">
-        <span>Invite selected</span>
+      <button class="button is-info is-normal is-rounded" id="send-invites-button">
+        <span>Send Invite(s)</span>
       </button>
   </header>
   <section class="modal-card-body has-text-centered">
 
-  <div id="image">
-      <img draggable="false" id="image-content" src="{{ project.profile_photo.src }}">
-  </button>
-  </div>
-  <br>
   <div>
-      <h1><b>Members</b></h1>
-      <textarea class="textarea has-fixed-size" placeholder="Add your Project's members" id="description-field" rows="3" maxlength="160">{% if project.description %}{{project.description}}{% endif %}</textarea>
+      <h1><b>Invite allies</b></h1>
+      <textarea class="textarea has-fixed-size" placeholder="Enter names or usernames" id="add-members-field" rows="3" maxlength="160"></textarea>
     </div>
       <div id="feedback-members" class="feedback">
         <div class="message"></div>
       </div>
       <br id="members-anchor">
-
-    </div>
+  <div>
+      
 
   </div>
   <br>
