--- a/app/templates/profiles/project/edit.html
+++ b/app/templates/profiles/project/edit.html
@@ -16,7 +16,7 @@
 
   <div id="edit-associate-image">
       <img draggable="false" id="edit-associate-image-content" src="{{ project.profile_photo.src }}">
-      <input type="file"  accept="image/*" name="image" id="upload" onchange="loadImage(event, '#edit-associate-image-content')" style="display: none;">
+      <input type="file"  accept="image/*" name="image" id="upload-image" onchange="loadImage(event, '#edit-associate-image-content')" style="display: none;">
     <button class="button is-large is-white" id="edit-associate-image-upload">
     <span class="icon is-medium">
       <i class="fa fa-camera-retro"></i>
