fixed email auth error handling

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
     {% elif exonavbar %}
         {% include "navbar/exonavbar.html" %}
     {% endif %}
-    
+    <div id="flash"><p class="title is-4 has-text-centered"></p></div>
     {% if background %}
     <section class="hero is-info is-bold {% if size %}is-{{size}}{% endif %}">
     <div class="hero-body" id="background">
