--- a/app/templates/profiles/project/profile.html
+++ b/app/templates/profiles/project/profile.html
@@ -125,7 +125,7 @@
       {% for project in user.projects %}
       {% endfor %}
       {% if user==current_user %}
-      <div class="add-specific-button" id="create-project-button"><span>Create project</span></div>
+      <div class="add-specific-button" id="create-project-button"><span>Add Role</span></div>
       {% endif %}
       {% endraw %}
     </div>
@@ -134,7 +134,7 @@
       {% for project in user.projects %}
       {% endfor %}
       {% if user==current_user %}
-      <div class="add-specific-button" id="create-project-button"><span>Create project</span></div>
+      <div class="add-specific-button" id="create-project-button"><span>Add comm</span></div>
       {% endif %}
       {% endraw %}
     </div>
@@ -163,6 +163,8 @@
 <link rel="stylesheet" href="/static/css/profiles/user/profile.css">
 <link rel="stylesheet" href="/static/css/profiles/edit.css">
 <link rel="stylesheet" href="/static/css/profiles/photo.css">
+<link rel="stylesheet" href="/static/css/profiles/add-members.css">
+
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
 <!-- Probably good for now to have this below-->
 <script src="/static/js/profiles/user/profile.js"></script>
