--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -127,6 +127,20 @@ margin-top: 200px;
 	background-size: 75%;
 }
 
+#flash {
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 50px;
+	display: flex;
+	justify-content: center; /* align horizontal */
+	align-items: center; /* align vertical */
+}
+
+#flash p {
+	color: white;
+}
+
 p.is-close {
 	margin-bottom: 7px !important;
 }
