--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="content has-text-centered" id="footer-content" style="background-color: rgba(255,255,255,0.25)">
         <p id="footer-text" style="color: black;">
-          <strong >Sclean</strong> by Theo Lemle, Nicolaj Terndrup & Frederik Christoffersen
+          <strong >CTW</strong> by Theo Lemle, Nicolaj Terndrup & Frederik Christoffersen
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
           </span><b>2020</b>
@@ -12,7 +12,7 @@
           <a class="icon has-text-info" href="https://twitter.com/Frederik_W_L_C" target="_blank">
             <i class="fa fa-globe"></i>
           </a>          
-          <a class="icon has-text-info" href="https://github.com/FrederikWLC/sclean" target="_blank">
+          <a class="icon has-text-info" href="https://github.com/FrederikWLC/ctw" target="_blank">
             <i class="fa fa-github"></i>
           </a>
           <a class="icon has-text-info" href="mailto:frederik.w.l.christoffersen@gmail.com" target="_blank">
