--- a/app/templates/profiles/project/profile.html
+++ b/app/templates/profiles/project/profile.html
@@ -180,10 +180,6 @@
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script type="text/javascript">
 
-  function sendInvites() {
-    sendProjectInvites();
-  }
-
   var handle = "{{project.handle}}";
 
   function makeConnectButtonDefault() {
@@ -391,6 +387,37 @@ if(!$('#show-location').is(":checked")) {
 
 {% if request.url_rule.endpoint in ['profiles.edit_project','profiles.create_project','profiles.create_project']  %}
 load_map_js();
+{% endif %}
+</script>
+<script type="text/javascript">
+  function sendInvites() {
+    sendProjectInvites();
+  }
+
+function sendProjectInvites() {
+  var formData = new FormData();
+    var usernames = JSON.stringify($("#add-members-tags-container").children().toArray().map( element => $(element).data('username')));
+    console.log(usernames);
+   formData.append("usernames", usernames);
+   formData.append("do", true)
+
+    $.post({
+      type: "POST",
+      url: "/£"+handle+"/invite/",
+      data: formData,
+      processData: false,
+      contentType: false,
+      success(response) {
+        var response = JSON.parse(response);
+        var status = response["status"];
+        if (status === "success") { location.replace("/£"+response["handle"]+"/"); }
+        else{message(status, response["box_id"], true);}
+        
+      }});
+}
+
+{% if request.url_rule.endpoint in ['profiles.project_add_members']  %}
+load_add_members_js();
 {% endif %}
 </script>
 <script type="text/javascript">
