--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -18,12 +18,13 @@
       <div id="profile-right-top">
         <div id="profile-bar" class="field">
           <div id="profile-bar-content">
-            <div id="profile-bar-content">
-            {% if user != current_user and current_user.is_authenticated %}
+            {% if club not in current_user.clubs %}
+            <!--
+            {% raw %}
               <button class="button is-info is-inverted" id="more-details-button"><span class="icon is-small"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></span></button>
-              {% with request_sent = models.UserToUserRequest.query.filter_by(type='ally', sender=current_user, receiver=user).first(), request_received = models.UserToUserRequest.query.filter_by(type='ally', sender=user, receiver=current_user).first(), is_allied = user in current_user.allies %}
-              <button id="connect-button" class="button {% if is_allied %}is-info{% elif request_sent %} is-light {% elif request_received  %}is-success{% else %}is-link{% endif %}" data-type="{% if is_allied %}connected{% elif request_sent %}pending{% elif request_received %}accept{% else %}default{% endif %}">
-                {% if is_allied %}
+              {% with request_sent = models.UserToClubRequest.query.filter_by(type='join', sender=current_user, receiver=user).first(), request_received = models.ClubToUserRequest.query.filter_by(type='connect', sender=user, receiver=current_user).first(), is_joined = club in current_user.clubs %}
+              <button id="connect-button" class="button {% if is_connected %}is-info{% elif request_sent %} is-light {% elif request_received  %}is-success{% else %}is-link{% endif %}" data-type="{% if is_connected %}connected{% elif request_sent %}pending{% elif request_received %}accept{% else %}default{% endif %}">
+                {% if is_connected %}
                   {% include 'profiles/user/connect-button/connected.html' %}
                 {% elif request_sent %}
                   {% include 'profiles/user/connect-button/pending.html' %}
@@ -34,8 +35,11 @@
                 {% endif %}
               </button>
               {% endwith %}
+              {% endraw %}
+               -->
+               <button class="button is-info is-inverted" id="join-button">Join</button>
             {% else %}
-              <button class="button is-info is-inverted" id="edit-button" href="/settings/profile/">Edit profile</button>
+              <button class="button is-info is-inverted" id="edit-button" href="/settings/profile/">Edit Club</button>
               {% endif %}
           </div>
           <br style="clear: both;">
