--- a/app/templates/profiles/club/create.html
+++ b/app/templates/profiles/club/create.html
@@ -57,6 +57,7 @@
       </div>
       <br id="description-anchor">
 
+    <!--Public button-->
     <h1><b>Public</b></h1>
     <label class="switch">
       <input type="checkbox" id="public">
@@ -67,6 +68,7 @@
       </div>
       <br id="public-anchor">
 
+    <!--Show location button-->
     <h1><b>Show location</b></h1>
     <label class="switch">
       <input type="checkbox" id="show-location">
