--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -19,28 +19,26 @@
         <div id="profile-bar" class="field">
           <div id="profile-bar-content">
             {% if club not in current_user.clubs %}
-            <!--
-            {% raw %}
+              <!--{% raw %}-->
               <button class="button is-info is-inverted" id="more-details-button"><span class="icon is-small"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></span></button>
               {% with request_sent = models.UserToClubRequest.query.filter_by(type='join', sender=current_user, receiver=user).first(), request_received = models.ClubToUserRequest.query.filter_by(type='connect', sender=user, receiver=current_user).first(), is_joined = club in current_user.clubs %}
-              <button id="connect-button" class="button {% if is_connected %}is-info{% elif request_sent %} is-light {% elif request_received  %}is-success{% else %}is-link{% endif %}" data-type="{% if is_connected %}connected{% elif request_sent %}pending{% elif request_received %}accept{% else %}default{% endif %}">
+              <button id="connected-button" class="button {% if is_connected %}is-info{% elif request_sent %} is-light {% elif request_received  %}is-success{% else %}is-link{% endif %}" data-type="{% if is_connected %}connected{% elif request_sent %}pending{% elif request_received %}accept{% else %}default{% endif %}">
                 {% if is_connected %}
-                  {% include 'profiles/user/connect-button/connected.html' %}
+                  {% include 'profiles/join-button/connected.html' %}
                 {% elif request_sent %}
-                  {% include 'profiles/user/connect-button/pending.html' %}
+                  {% include 'profiles/join-button/pending.html' %}
                 {% elif request_received %}
-                  {% include 'profiles/user/connect-button/accept.html' %}
+                  {% include 'profiles/join-button/accept.html' %}
                 {% else %}
-                  {% include 'profiles/user/connect-button/default.html' %}
+                  {% include 'profiles/join-button/default.html' %}
                 {% endif %}
               </button>
               {% endwith %}
-              {% endraw %}
-               -->
-               <button class="button is-info is-inverted" id="join-button">Join</button>
+              <!--{% endraw %}-->
+              <!--<button class="button is-info is-inverted" id="join-button">Join</button>-->
             {% else %}
               <button class="button is-info is-inverted" id="edit-button" href="/settings/profile/">Edit Club</button>
-              {% endif %}
+            {% endif %}
           </div>
           <br style="clear: both;">
         </div>
@@ -184,7 +182,7 @@
   function makeConnectButtonDefault() {
     $('#connect-button').addClass('is-info');
     $('#connect-button').removeClass('is-light').removeClass('is-link');
-    $('#connect-button').html(`{% include 'profiles/user/connect-button/default.html' %}`);
+    $('#connect-button').html(`{% include 'profiles/join-button/default.html' %}`);
     $('#connect-button').data('type', 'default');
     $('#connect-button').removeClass('is-danger');
     
@@ -192,14 +190,14 @@
 
   function makeConnectButtonPending() {
     $('#connect-button').toggleClass('is-info is-light');
-    $('#connect-button').html(`{% include 'profiles/user/connect-button/pending.html' %}`);
+    $('#connect-button').html(`{% include 'profiles/join-button/pending.html' %}`);
     $('#connect-button').data('type', 'pending');
     $('#connect-button').addClass('calm');
   }
 
   function makeConnectButtonConnected() {
     $('#connect-button').toggleClass('is-success is-info');
-    $('#connect-button').html(`{% include 'profiles/user/connect-button/connected.html' %}`);
+    $('#connect-button').html(`{% include 'profiles/join-button/connected.html' %}`);
     $('#connect-button').data('type', 'connected');
     $('#connect-button').addClass('calm');
   }
@@ -208,24 +206,24 @@ $("#connect-button").hover(
   function() {
         if ($(this).data('type') == 'connected' && !$(this).hasClass('calm')) {
           $(this).addClass('is-danger');
-          $(this).html(`{% include 'profiles/user/connect-button/disconnect.html' %}`);
+          $(this).html(`{% include 'profiles/join-button/disconnect.html' %}`);
         }
         else if ($(this).data('type') == 'pending' && !$(this).hasClass('calm')) {
           $(this).addClass('is-danger');
-          $(this).html(`{% include 'profiles/user/connect-button/undo.html' %}`);
+          $(this).html(`{% include 'profiles/join-button/undo.html' %}`);
 
     }
   }, function() {
         if ($(this).data('type') == 'connected') {
           $(this).removeClass('is-danger');
-          $(this).html(`{% include 'profiles/user/connect-button/connected.html' %}`);
+          $(this).html(`{% include 'profiles/join-button/connected.html' %}`);
           $(this).removeClass('calm');
 
         }
         else if ($(this).data('type') == 'pending') {
           $(this).removeClass('is-danger');
           $(this).removeClass('calm');
-          $(this).html(`{% include 'profiles/user/connect-button/pending.html' %}`);
+          $(this).html(`{% include 'profiles/join-button/pending.html' %}`);
 
         }
   }
