--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -25,15 +25,19 @@
               </div>
   <div class="dropdown-menu" id="dropdown-menu" role="menu">
     <div class="dropdown-content">
-      <a href="#" class="dropdown-item">
-        Message
+      <a href="/message/{{user.username}}/" class="dropdown-item">
+        <span class="text">Message</span><span class="icon">
+ <i class="fa fa-envelope" aria-hidden="true"></i>
+</span>
       </a>
       <a class="dropdown-item">
         Other dropdown item
       </a>
       <hr class="dropdown-divider">
       <a href="#" class="dropdown-item">
-        With a divider
+        <span class="text">Report</span><span class="icon">
+ <i class="fa fa-flag" aria-hidden="true"></i>
+</span>
       </a>
     </div>
   </div>
