--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -3,20 +3,64 @@
 <p class="title selectable" style="margin: auto;margin-bottom: 10px;">Feedback</p>
 <div class="container floater" style="text-align: center;">
 	<!-- Create feedback -->
-	<div style="display: inline-block;">
+	<div style="display: flex; width:100%; margin-bottom: 10px;">
 		<figure class="image is-48x48" style="width:40px;height: 40px; float: left; margin-right: 5px;">
 				<img class="is-rounded" src="{{current_user.profile_photo.src}}">
 			</figure>
-		<div class="field is-expanded has-addons" style="float:right;">
-                  <p class="control">
+		<div class="field is-expanded has-addons" style="float:right; width: 100%;">
+                  <p class="control has-icons-left" style="width: 100%;">
                     <input id="create-feedback" class="input" type="location" placeholder='Create feedback'>
+                    <span class="icon is-small is-left">
+	                    	<i class="fa fa-pencil"></i>
+	                  	</span>
                   </p>
-                </div>
-	</div>
-	<div id="search-filter"></div>
-	{% for fb in feedback %}
+      </div>
+  </div>
+
+    <!-- Filter feedback -->
+    <div class="is-centered" style="background-color: #ffff; border-radius: 10px; clear: both; padding: 5px; margin: auto;">
+    <div class="field is-expanded has-addons is-centered" style="float:left; margin-right: 10px;">
+    			<p class="control has-icons-left">
+                    <input id="search-feedback" class="input" type="location" placeholder='Search feedback'>
+                    <span class="icon is-small is-left">
+	                    	<i class="fa fa-search"></i>
+	                  	</span>
+           </p>
+       </div>
+    <div class="field is-grouped is-centered">
+    	<p class="control">
+    <button class="button transition fb-search-b" data-on="is-danger is-light" data-active="false">
+      <span id="cog" class="icon">
+        <i class="fas fa-fire-alt"></i>
+      </span>
+    </button>
+  </p>
+  <p class="control">
+    <button class="button transition fb-search-b" data-on="is-warning is-light" data-active="false">
+      <span id="cog" class="icon">
+        <i class="fas fa-medal"></i>
+      </span>
+    </button>
+  </p>
+  <p class="control">
+    <button class="button transition fb-search-b" data-on="is-success is-light" data-active="false">
+      <span id="cog" class="icon">
+        <i class="fas fa-seedling"></i>
+      </span>
+    </button>
+  </p>
+  <p class="control">
+    <button class="button transition fb-search-b" data-on="is-link is-light" data-active="false">
+      <span id="cog" class="icon">
+        <i class="fas fa-rocket"></i>
+      </span>
+    </button>
+  </p>
+    </div>
+   </div>
+		{% for fb in feedback %}
 			{% include 'comms/fb.html' %}
-	{% endfor %}
+		{% endfor %}
 </div>
 
 {% endblock %}
@@ -25,5 +69,32 @@
 	$("#create-feedback").on('focus', function() {
 		window.location.href = "/feedback/submit/";
 	});
+
+	$(".fb-search-b").on('click', function() {
+		var $clicked = $(this);
+		var clicked	= this;
+		$(".fb-search-b").each(function() {
+			var $this = $(this);
+			if (this != clicked) {
+			$this.attr('data-active', "false");
+				$this.removeClass($this.data('on'));
+			}
+		})
+		
+		console.log($clicked.attr('data-active'));
+		if ($clicked.attr('data-active') == "true") {
+					$clicked.attr('data-active', "false");
+					$clicked.removeClass($clicked.data('on'));
+					console.log("DDED");
+
+		}
+		else {
+			console.log("ADASASD");
+		$clicked.attr('data-active', "true");
+		$clicked.addClass($clicked.data('on'));
+	}
+
+
+	})
 </script>
 {% endblock %}
