feedback upvoting works like a charm!

--- a/app/templates/comms/feedback/fb.html
+++ b/app/templates/comms/feedback/fb.html
@@ -1,16 +1,17 @@
-<div class="fb subprofile box" style="text-align: left;">
+{% with is_upvoted = fb.is_upvoted(current_user), is_downvoted = fb.is_downvoted(current_user) %}
+<div class="fb subprofile box" style="text-align: left;" data-id="{{fb.id}}">
 <div class="ballot">
-	<button class="button transition is-small ballot-item is-inverted is-dark vote upvote" data-on="is-info">
+	<button class="button transition is-small ballot-item is-inverted is-dark vote upvote {% if is_upvoted %}is-info{% endif %}" data-on="is-info" {% if is_upvoted %}data-active="true"{% endif %}>
       <span class="icon is-medium">
         <i class="fas fa-caret-up fa-2x"></i>
       </span>
     </button>
-    <button class="button transition is-small is-static ballot-item">
+    <button class="button transition is-small is-static ballot-item counter">
       <span class="text">
         {{fb.upvotes.count()-fb.downvotes.count()}}
       </span>
     </button>
-    <button class="button transition is-small ballot-item is-dark is-inverted vote downvote" data-on="is-danger">
+    <button class="button transition is-small ballot-item is-dark is-inverted vote downvote {% if is_downvoted %}is-danger{% endif %}" data-on="is-danger" {% if is_downvoted %}data-active="true"{% endif %}>
       <span class="icon is-medium">
         <i class="fas fa-caret-down fa-2x"></i>
       </span>
@@ -21,3 +22,4 @@
 <p class="subtitle is-6 text" style="color:black;">{{fb.content}}</p>
 </div>
 </div>
+{% endwith %}
