--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -101,44 +101,101 @@
 
 	$(".vote").on('click', function() {
 		var $clicked = $(this);
+		var $fb = $clicked.closest('.fb');
+		var $counter = $fb.find('.counter').find('span');
+		var $ballot = $fb.find('.ballot');
+		var is_upvoted = $ballot.find('.upvote').attr('data-active') === "true";
+		var is_downvoted = $ballot.find('.downvote').attr('data-active') === "true";
+		var fb_id = $fb.data('id');
 		var clicked	= this;
-		$clicked.closest('.ballot').find('.vote').each(function() {
+
+
+		function refreshBallot() {
+		$ballot.find('.vote').each(function() {
 			var $this = $(this);
 			if (this != clicked) {
 			$this.attr('data-active', "false");
 				$this.removeClass($this.data('on'));
 			}
 		});
-		
-		console.log($clicked.attr('data-active'));
-		if ($clicked.attr('data-active') == "true") {
-					$clicked.attr('data-active', "false");
-					$clicked.removeClass($clicked.data('on'));
-					console.log("DDED");
+	}
 
+	function upvote(fb_id) {
+		post("/feedback/", function (response) {
+			var response = JSON.parse(response)["status"];
+      refreshBallot();
+			$clicked.attr('data-active', "true");
+			$clicked.addClass($clicked.data('on'))
+			if (is_downvoted) {
+			$counter.text(parseInt($counter.text())+2);
+			}
+			else {
+				$counter.text(parseInt($counter.text())+1);
+
+			}
+		},{'action':'upvote','fb_id':fb_id});
+ 	
+	}
+
+	function downvote(fb_id) {
+		post("/feedback/", function (response) {
+			var response = JSON.parse(response)["status"];
+      refreshBallot();
+			$clicked.attr('data-active', "true");
+			$clicked.addClass($clicked.data('on'));
+			if (is_upvoted) {
+			$counter.text(parseInt($counter.text())-2);
+			}
+			else {
+				$counter.text(parseInt($counter.text())-1);
+			}
+		},{'action':'downvote','fb_id':fb_id});
+	}
+
+	function unupvote(fb_id) {
+		post("/feedback/", function (response) {
+			var response = JSON.parse(response)["status"];
+      refreshBallot();
+			$clicked.attr('data-active', "false");
+			$clicked.removeClass($clicked.data('on'));
+			$counter.text(parseInt($counter.text())-1); 
+		},{'action':'unupvote','fb_id':fb_id});
+	}
+
+	function undownvote(fb_id) {
+		post("/feedback/", function (response) {
+			var response = JSON.parse(response)["status"];
+      refreshBallot();
+			$clicked.attr('data-active', "false");
+			$clicked.removeClass($clicked.data('on'));
+			$counter.text(parseInt($counter.text())+1); 
+		},{'action':'undownvote','fb_id':fb_id});
+	}
+
+		if ($clicked.attr('data-active') === "true") {
+			if ($clicked.hasClass('upvote')) {
+				unupvote(fb_id);
+			}
+			else if ($clicked.hasClass('downvote')) {
+				undownvote(fb_id);
+			}
 		}
+
 		else {
-		$clicked.attr('data-active', "true");
-		$clicked.addClass($clicked.data('on'));
-	}});
+			if ($clicked.hasClass('upvote')) {
+				upvote(fb_id);
+			}
+			else if ($clicked.hasClass('downvote')) {
+				downvote(fb_id);
+			}
+			
+		}
+
+		});
 
 
-	function like() {
-		
-	}
 
 
-	function dislike() {
-
-	}
-
-	function unlike() {
-
-	}
-
-	function undislike() {
-
-	}
 
 </script>
 <style type="text/css">
